Fixed Checkbox alignment

--- a/src/components/views/series-view/series-view.scss
+++ b/src/components/views/series-view/series-view.scss
@@ -1,4 +1,3 @@
 :host {
   display: block;
-  margin-left: 40px;
 }
