--- a/src/components/views/study-view/study-view.scss
+++ b/src/components/views/study-view/study-view.scss
@@ -1,5 +1,4 @@
 :host {
   display: block;
-  margin-left: 20px;
 }
 
